--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -134,7 +134,7 @@
     .wrapper {
         flex: 1;
         position: absolute;
-        top: calc(100% - 12px);
+        top: 100%;
         left: 0;
         height: 0;
         min-width: 220px;
@@ -146,7 +146,7 @@
     &.show {
         z-index: 100;
         .wrapper {
-            height: 280px;
+            height: auto;
             border: 1px solid $gray-tint04;
             overflow-y: scroll;
             display: block;
@@ -164,12 +164,41 @@
             margin: 0 $input-padding-x;
             border-bottom: 1px solid $gray-tint04;
             font-size: 16px;
-            &:last-of-type {
-                border: 0;
-            }
 
             .form-check {
                 margin: 0;
+            }
+        }
+    }
+
+    div.list--form-check-input {
+        @media (min-width: map-get($grid-breakpoints, sm)) {
+            display: block;
+        }
+
+        .container__details-list {
+            display: flex;
+            flex-wrap: wrap;
+            min-width: 940px;
+
+            > details {
+                flex: 0 0 25%;
+                min-width: 230px;
+            }
+        }
+
+        ul.list--form-check-input {
+            &:last-child {
+                li {
+                    border: 0;
+                }
+            }
+        }
+        ul.list--form-check-input {
+            &:only-of-type {
+                li {
+                    border-top: 1px solid $gray-tint04;
+                }
             }
         }
     }
