--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -22,3 +22,4 @@
 @import "./components/map";
 @import "./components/tabs";
 @import "./components/messages";
+@import "./components/change-location";
