Styling new address

--- a/app/frontend/assets/styles/components/_change-location.scss
+++ b/app/frontend/assets/styles/components/_change-location.scss
@@ -5,6 +5,11 @@
         img {
             vertical-align: middle;
         }
+
+        .marker--blue {
+            width: 20px;
+            height: 20px;
+        }
     }
     .card {
         padding: $input-padding-y;
