buurt filter label

--- a/app/apps/main/templates/widgets/checkbox_options_grouped.html
+++ b/app/apps/main/templates/widgets/checkbox_options_grouped.html
@@ -9,7 +9,7 @@
                 <summary class="form-check">
                     <input type="checkbox" data-subSelect-target="groupCheckbox" data-action="subSelect#checkboxChangeHandler">
                     <label class="form-check-label">
-                        {{group}}<span data-subSelect-target="selectedCount"></span>
+                        {{group}} (<span data-subSelect-target="selectedCount"></span>)
                     </label>
                 </summary>
 
