--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -134,21 +134,21 @@
     .wrapper {
         flex: 1;
         position: absolute;
-        top: 100%;
+        top: calc(100% - 1px);
         left: 0;
         height: 0;
         min-width: 220px;
         overflow: hidden;
         background-color: #fff;
         display: none;
+        padding: 4px;
     }
 
     &.show {
         z-index: 100;
         .wrapper {
             height: auto;
-            border: 1px solid $gray-tint04;
-            overflow-y: scroll;
+            border: 2px solid $gray-tint08;
             display: block;
         }
     }
@@ -156,14 +156,15 @@
     ul.list--form-check-input {
         @include list-clean;
         margin: 0;
+        padding: 0 0 0 8px !important;
         display: block;
 
         li {
             flex: 0;
-            padding: $input-padding-x 0;
-            margin: 0 $input-padding-x;
+            padding: $input-padding-y 0;
+            margin: 0;
             border-bottom: 1px solid $gray-tint04;
-            font-size: 16px;
+            font-size: 0.889em;
 
             .form-check {
                 margin: 0;
@@ -179,11 +180,30 @@
         .container__details-list {
             display: flex;
             flex-wrap: wrap;
-            min-width: 940px;
+            min-width: 960px;
 
             > details {
-                flex: 0 0 25%;
+                flex: 0 0 24%;
                 min-width: 230px;
+                margin: 4px;
+                font-size: 0.889em;
+
+                &[open] {
+                    summary,
+                    ul {
+                        background-color: $gray-tint02;
+                    }
+                }
+
+                summary {
+                    margin: 0;
+                    border-top: 0;
+                    border-bottom: 1px solid $gray-tint04;
+
+                    .form-check-label {
+                        pointer-events: none;
+                    }
+                }
             }
         }
 
@@ -191,13 +211,6 @@
             &:last-child {
                 li {
                     border: 0;
-                }
-            }
-        }
-        ul.list--form-check-input {
-            &:only-of-type {
-                li {
-                    border-top: 1px solid $gray-tint04;
                 }
             }
         }
